--- a/double_pinyin.custom.yaml
+++ b/double_pinyin.custom.yaml
@@ -28,3 +28,5 @@
 patch:
   # 載入朙月拼音擴充詞庫
   "translator/dictionary": luna_pinyin.extended
+  "punctuator/import_preset": symbols
+  "recognizer/patterns/punct": "^/([A-Z|a-z]*|[0-9]|10)$"
