update yaml files

--- a/double_pinyin.custom.yaml
+++ b/double_pinyin.custom.yaml
@@ -2,7 +2,7 @@
 #
 # 補靪功能：將自然碼雙拼的詞庫修改爲朙月拼音擴充詞庫
 #
-# 作者：瑾昀 <cokunhui@gmail.com>
+# 作者：瑾昀 <cokunhui@gmail.com>， henices <zhouzhenster@gmail.com>
 #
 # 部署位置：
 # ~/.config/ibus/rime  (Linux)
